codemp/generated/game/bg_saberLoad.h

int BG_SoundIndex( const char *sound );
qboolean BG_ParseLiteral( const char **data, const char *string );
qboolean BG_ParseLiteralSilent( const char **data, const char *string );
saber_colors_t TranslateSaberColor( const char *name );
const char *SaberColorToString( saber_colors_t color );
saber_styles_t TranslateSaberStyle( const char *name );
saberType_t TranslateSaberType( const char *name );
qboolean WP_SaberBladeUseSecondBladeStyle( saberInfo_t *saber, int bladeNum );
qboolean WP_SaberBladeDoTransitionDamage( saberInfo_t *saber, int bladeNum );
qboolean WP_UseFirstValidSaberStyle( saberInfo_t *saber1, saberInfo_t *saber2, int saberHolstered, int *saberAnimLevel );
qboolean WP_SaberStyleValidForSaber( saberInfo_t *saber1, saberInfo_t *saber2, int saberHolstered, int saberAnimLevel );
qboolean WP_SaberCanTurnOffSomeBlades( saberInfo_t *saber );
void WP_SaberSetDefaults( saberInfo_t *saber );
static void Saber_ParseName( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberType( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberModel( saberInfo_t *saber, const char **p );
static void Saber_ParseCustomSkin( saberInfo_t *saber, const char **p );
static void Saber_ParseSoundOn( saberInfo_t *saber, const char **p );
static void Saber_ParseSoundLoop( saberInfo_t *saber, const char **p );
static void Saber_ParseSoundOff( saberInfo_t *saber, const char **p );
static void Saber_ParseNumBlades( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor2( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor3( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor4( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor5( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor6( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberColor7( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength2( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength3( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength4( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength5( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength6( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberLength7( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius2( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius3( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius4( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius5( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius6( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberRadius7( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberStyle( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberStyleLearned( saberInfo_t *saber, const char **p );
static void Saber_ParseSaberStyleForbidden( saberInfo_t *saber, const char **p );
static void Saber_ParseMaxChain( saberInfo_t *saber, const char **p );
static void Saber_ParseLockable( saberInfo_t *saber, const char **p );
static void Saber_ParseThrowable( saberInfo_t *saber, const char **p );
static void Saber_ParseDisarmable( saberInfo_t *saber, const char **p );
static void Saber_ParseBlocking( saberInfo_t *saber, const char **p );
static void Saber_ParseTwoHanded( saberInfo_t *saber, const char **p );
static void Saber_ParseForceRestrict( saberInfo_t *saber, const char **p );
static void Saber_ParseLockBonus( saberInfo_t *saber, const char **p );
static void Saber_ParseParryBonus( saberInfo_t *saber, const char **p );
static void Saber_ParseBreakParryBonus( saberInfo_t *saber, const char **p );
static void Saber_ParseBreakParryBonus2( saberInfo_t *saber, const char **p );
static void Saber_ParseDisarmBonus( saberInfo_t *saber, const char **p );
static void Saber_ParseDisarmBonus2( saberInfo_t *saber, const char **p );
static void Saber_ParseSingleBladeStyle( saberInfo_t *saber, const char **p );
static void Saber_ParseSingleBladeThrowable( saberInfo_t *saber, const char **p );
static void Saber_ParseBrokenSaber1( saberInfo_t *saber, const char **p );
static void Saber_ParseBrokenSaber2( saberInfo_t *saber, const char **p );
static void Saber_ParseReturnDamage( saberInfo_t *saber, const char **p );
static void Saber_ParseSpinSound( saberInfo_t *saber, const char **p );
static void Saber_ParseSwingSound1( saberInfo_t *saber, const char **p );
static void Saber_ParseSwingSound2( saberInfo_t *saber, const char **p );
static void Saber_ParseSwingSound3( saberInfo_t *saber, const char **p );
static void Saber_ParseMoveSpeedScale( saberInfo_t *saber, const char **p );
static void Saber_ParseAnimSpeedScale( saberInfo_t *saber, const char **p );
static void Saber_ParseBounceOnWalls( saberInfo_t *saber, const char **p );
static void Saber_ParseBoltToWrist( saberInfo_t *saber, const char **p );
static void Saber_ParseKataMove( saberInfo_t *saber, const char **p );
static void Saber_ParseLungeAtkMove( saberInfo_t *saber, const char **p );
static void Saber_ParseJumpAtkUpMove( saberInfo_t *saber, const char **p );
static void Saber_ParseJumpAtkFwdMove( saberInfo_t *saber, const char **p );
static void Saber_ParseJumpAtkBackMove( saberInfo_t *saber, const char **p );
static void Saber_ParseJumpAtkRightMove( saberInfo_t *saber, const char **p );
static void Saber_ParseJumpAtkLeftMove( saberInfo_t *saber, const char **p );
static void Saber_ParseReadyAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseDrawAnim( saberInfo_t *saber, const char **p );
static void Saber_ParsePutawayAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseTauntAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseBowAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseMeditateAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseFlourishAnim( saberInfo_t *saber, const char **p );
static void Saber_ParseGloatAnim( saberInfo_t *saber, const char **p );