codemp/julia/generated/game/bg_saberLoad.jl

BG_SoundIndex( sound_ ) = ccall((:BG_SoundIndex, lib), Int32, ( Ptr{Char},  ), sound_ );
BG_ParseLiteral( data_, string_ ) = ccall((:BG_ParseLiteral, lib), qboolean, ( Ptr{Ptr{Char}}, Ptr{Char},  ), data_, string_ );
BG_ParseLiteralSilent( data_, string_ ) = ccall((:BG_ParseLiteralSilent, lib), qboolean, ( Ptr{Ptr{Char}}, Ptr{Char},  ), data_, string_ );
TranslateSaberColor( name_ ) = ccall((:TranslateSaberColor, lib), saber_colors_t, ( Ptr{Char},  ), name_ );
SaberColorToString( color_ ) = ccall((:SaberColorToString, lib), Char, ( saber_colors_t,  ), color_ );
TranslateSaberStyle( name_ ) = ccall((:TranslateSaberStyle, lib), saber_styles_t, ( Ptr{Char},  ), name_ );
TranslateSaberType( name_ ) = ccall((:TranslateSaberType, lib), saberType_t, ( Ptr{Char},  ), name_ );
WP_SaberBladeUseSecondBladeStyle( saber_, bladeNum_ ) = ccall((:WP_SaberBladeUseSecondBladeStyle, lib), qboolean, ( Ptr{saberInfo_t}, Int32,  ), saber_, bladeNum_ );
WP_SaberBladeDoTransitionDamage( saber_, bladeNum_ ) = ccall((:WP_SaberBladeDoTransitionDamage, lib), qboolean, ( Ptr{saberInfo_t}, Int32,  ), saber_, bladeNum_ );
WP_UseFirstValidSaberStyle( saber1_, saber2_, saberHolstered_, saberAnimLevel_ ) = ccall((:WP_UseFirstValidSaberStyle, lib), qboolean, ( Ptr{saberInfo_t}, Ptr{saberInfo_t}, Int32, Ptr{Int32},  ), saber1_, saber2_, saberHolstered_, saberAnimLevel_ );
WP_SaberStyleValidForSaber( saber1_, saber2_, saberHolstered_, saberAnimLevel_ ) = ccall((:WP_SaberStyleValidForSaber, lib), qboolean, ( Ptr{saberInfo_t}, Ptr{saberInfo_t}, Int32, Int32,  ), saber1_, saber2_, saberHolstered_, saberAnimLevel_ );
WP_SaberCanTurnOffSomeBlades( saber_ ) = ccall((:WP_SaberCanTurnOffSomeBlades, lib), qboolean, ( Ptr{saberInfo_t},  ), saber_ );
WP_SaberSetDefaults( saber_ ) = ccall((:WP_SaberSetDefaults, lib), Void, ( Ptr{saberInfo_t},  ), saber_ );
Saber_ParseName( saber_, p_ ) = ccall((:Saber_ParseName, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberType( saber_, p_ ) = ccall((:Saber_ParseSaberType, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberModel( saber_, p_ ) = ccall((:Saber_ParseSaberModel, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseCustomSkin( saber_, p_ ) = ccall((:Saber_ParseCustomSkin, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSoundOn( saber_, p_ ) = ccall((:Saber_ParseSoundOn, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSoundLoop( saber_, p_ ) = ccall((:Saber_ParseSoundLoop, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSoundOff( saber_, p_ ) = ccall((:Saber_ParseSoundOff, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseNumBlades( saber_, p_ ) = ccall((:Saber_ParseNumBlades, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor( saber_, p_ ) = ccall((:Saber_ParseSaberColor, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor2( saber_, p_ ) = ccall((:Saber_ParseSaberColor2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor3( saber_, p_ ) = ccall((:Saber_ParseSaberColor3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor4( saber_, p_ ) = ccall((:Saber_ParseSaberColor4, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor5( saber_, p_ ) = ccall((:Saber_ParseSaberColor5, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor6( saber_, p_ ) = ccall((:Saber_ParseSaberColor6, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberColor7( saber_, p_ ) = ccall((:Saber_ParseSaberColor7, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength( saber_, p_ ) = ccall((:Saber_ParseSaberLength, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength2( saber_, p_ ) = ccall((:Saber_ParseSaberLength2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength3( saber_, p_ ) = ccall((:Saber_ParseSaberLength3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength4( saber_, p_ ) = ccall((:Saber_ParseSaberLength4, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength5( saber_, p_ ) = ccall((:Saber_ParseSaberLength5, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength6( saber_, p_ ) = ccall((:Saber_ParseSaberLength6, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberLength7( saber_, p_ ) = ccall((:Saber_ParseSaberLength7, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius( saber_, p_ ) = ccall((:Saber_ParseSaberRadius, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius2( saber_, p_ ) = ccall((:Saber_ParseSaberRadius2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius3( saber_, p_ ) = ccall((:Saber_ParseSaberRadius3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius4( saber_, p_ ) = ccall((:Saber_ParseSaberRadius4, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius5( saber_, p_ ) = ccall((:Saber_ParseSaberRadius5, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius6( saber_, p_ ) = ccall((:Saber_ParseSaberRadius6, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberRadius7( saber_, p_ ) = ccall((:Saber_ParseSaberRadius7, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberStyle( saber_, p_ ) = ccall((:Saber_ParseSaberStyle, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberStyleLearned( saber_, p_ ) = ccall((:Saber_ParseSaberStyleLearned, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSaberStyleForbidden( saber_, p_ ) = ccall((:Saber_ParseSaberStyleForbidden, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseMaxChain( saber_, p_ ) = ccall((:Saber_ParseMaxChain, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseLockable( saber_, p_ ) = ccall((:Saber_ParseLockable, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseThrowable( saber_, p_ ) = ccall((:Saber_ParseThrowable, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDisarmable( saber_, p_ ) = ccall((:Saber_ParseDisarmable, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBlocking( saber_, p_ ) = ccall((:Saber_ParseBlocking, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTwoHanded( saber_, p_ ) = ccall((:Saber_ParseTwoHanded, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseForceRestrict( saber_, p_ ) = ccall((:Saber_ParseForceRestrict, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseLockBonus( saber_, p_ ) = ccall((:Saber_ParseLockBonus, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseParryBonus( saber_, p_ ) = ccall((:Saber_ParseParryBonus, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBreakParryBonus( saber_, p_ ) = ccall((:Saber_ParseBreakParryBonus, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBreakParryBonus2( saber_, p_ ) = ccall((:Saber_ParseBreakParryBonus2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDisarmBonus( saber_, p_ ) = ccall((:Saber_ParseDisarmBonus, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDisarmBonus2( saber_, p_ ) = ccall((:Saber_ParseDisarmBonus2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSingleBladeStyle( saber_, p_ ) = ccall((:Saber_ParseSingleBladeStyle, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSingleBladeThrowable( saber_, p_ ) = ccall((:Saber_ParseSingleBladeThrowable, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBrokenSaber1( saber_, p_ ) = ccall((:Saber_ParseBrokenSaber1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBrokenSaber2( saber_, p_ ) = ccall((:Saber_ParseBrokenSaber2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseReturnDamage( saber_, p_ ) = ccall((:Saber_ParseReturnDamage, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSpinSound( saber_, p_ ) = ccall((:Saber_ParseSpinSound, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSwingSound1( saber_, p_ ) = ccall((:Saber_ParseSwingSound1, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSwingSound2( saber_, p_ ) = ccall((:Saber_ParseSwingSound2, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseSwingSound3( saber_, p_ ) = ccall((:Saber_ParseSwingSound3, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseMoveSpeedScale( saber_, p_ ) = ccall((:Saber_ParseMoveSpeedScale, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseAnimSpeedScale( saber_, p_ ) = ccall((:Saber_ParseAnimSpeedScale, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBounceOnWalls( saber_, p_ ) = ccall((:Saber_ParseBounceOnWalls, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBoltToWrist( saber_, p_ ) = ccall((:Saber_ParseBoltToWrist, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseKataMove( saber_, p_ ) = ccall((:Saber_ParseKataMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseLungeAtkMove( saber_, p_ ) = ccall((:Saber_ParseLungeAtkMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseJumpAtkUpMove( saber_, p_ ) = ccall((:Saber_ParseJumpAtkUpMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseJumpAtkFwdMove( saber_, p_ ) = ccall((:Saber_ParseJumpAtkFwdMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseJumpAtkBackMove( saber_, p_ ) = ccall((:Saber_ParseJumpAtkBackMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseJumpAtkRightMove( saber_, p_ ) = ccall((:Saber_ParseJumpAtkRightMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseJumpAtkLeftMove( saber_, p_ ) = ccall((:Saber_ParseJumpAtkLeftMove, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseReadyAnim( saber_, p_ ) = ccall((:Saber_ParseReadyAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseDrawAnim( saber_, p_ ) = ccall((:Saber_ParseDrawAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParsePutawayAnim( saber_, p_ ) = ccall((:Saber_ParsePutawayAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseTauntAnim( saber_, p_ ) = ccall((:Saber_ParseTauntAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseBowAnim( saber_, p_ ) = ccall((:Saber_ParseBowAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseMeditateAnim( saber_, p_ ) = ccall((:Saber_ParseMeditateAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseFlourishAnim( saber_, p_ ) = ccall((:Saber_ParseFlourishAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
Saber_ParseGloatAnim( saber_, p_ ) = ccall((:Saber_ParseGloatAnim, lib), Void, ( Ptr{saberInfo_t}, Ptr{Ptr{Char}},  ), saber_, p_ );
